Update .env with development commands and configurations
Added backend, frontend, and test commands to .env file.

--- a/.env
+++ b/.env
@@ -14,3 +14,57 @@ JWT_SECRET=your_jwt_secret
 # Server
 PORT=3000
 NODE_ENV=production
+# Terminal 1: Backend
+cd backend && npm run dev
+
+# Terminal 2: Frontend
+cd frontend && npm start
+
+# Terminal 3: Watch contracts
+cd contracts && npx hardhat node
+docker-compose -f docker-compose.yml up --build
+POST /api/auth/register
+POST /api/auth/login
+POST /api/holders/register
+GET /api/holders/:address
+POST /api/credentials/issue
+GET /api/credentials/:address
+GET /api/credentials/:credentialId/verify
+POST /api/credentials/:credentialId/revoke
+# Backend tests
+cd backend && npm test
+
+# Smart contract tests
+cd contracts && npx hardhat test
+
+# Frontend tests
+cd frontend && npm test
+
+---
+
+## File 2: .env.example
+
+```env name=.env.example
+# ========== BLOCKCHAIN CONFIGURATION ==========
+INFURA_API_KEY=your_infura_api_key_here
+PRIVATE_KEY=your_wallet_private_key_here
+CONTRACT_ADDRESS=0x...your_deployed_contract_address
+NETWORK=sepolia
+
+# ========== IPFS CONFIGURATION (Pinata) ==========
+PINATA_API_KEY=your_pinata_api_key_here
+PINATA_SECRET_KEY=your_pinata_secret_key_here
+
+# ========== JWT CONFIGURATION ==========
+JWT_SECRET=your_super_secret_jwt_key_min_32_chars_long
+
+# ========== SERVER CONFIGURATION ==========
+PORT=3000
+NODE_ENV=development
+
+# ========== DATABASE (Optional) ==========
+DATABASE_URL=your_database_url_here
+
+# ========== FRONTEND CONFIGURATION ==========
+REACT_APP_API_URL=http://localhost:3000/api
+REACT_APP_CHAIN_ID=11155111
